--- a/style/style.css
+++ b/style/style.css
@@ -26,11 +26,15 @@ font-weight: bold;
     font-size: 20px;
     font-weight: bold;
     color: white;
+    cursor: pointer;
 
 }
 /*main*/
 header{
     background-color: #FFF8F3;
+    background: url(../images/developer.png),url(../images/header_bg.png),#FFF8F3;
+    background-position: top left,bottom right;
+    background-repeat: no-repeat;
     
 }
 nav{
@@ -56,4 +60,36 @@ nav .menu a{
     font-size: 20x;
     text-decoration: none;
     color: #474747;
+}
+#banner{
+    border: 1px solid red;
+    margin: 47px 38px 0 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#banner .banner-content{
+    max-width: 585px;
+}
+#banner .banner-content h2{
+    font-size: 45px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 5PX;
+}
+#banner .banner-content h1{
+    font-size: 85px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 20px;
+}
+#banner .banner-content p{
+    font-size: 18px;
+    color: #757575;
+    line-height: 30px;
+    width: ;
+}
+#banner .banner-image img{
+    max-width: 585px;
+    vertical-align: middle;
 }
