--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,7 @@ font-weight: bold;
 .section-heading{
     max-width: 827px;
     text-align: center;
+    margin: 0 auto;
 }
 .section-heading h2{
     font-size: 35px;
@@ -77,7 +78,7 @@ nav .menu a{
     color: #474747;
 }
 #banner{
-    border: 1px solid red;
+   
     margin: 47px 38px 0 230px;
     display: flex;
     justify-content: space-between;
@@ -102,7 +103,7 @@ nav .menu a{
     font-size: 18px;
     color: #757575;
     line-height: 30px;
-    width: ;
+    margin-bottom: 30px;
 }
 #banner .banner-image img{
     max-width: 585px;
@@ -135,3 +136,39 @@ nav .menu a{
     font-size: 20px;
     
 }
+#skills{
+    padding-top: 130px;
+}
+#skills .skills-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+#skills .skills-container .skills-box{
+    display: flex;
+    gap: 24px;
+}
+.skills-box .skill-card{
+    padding: 30px;
+    max-width: 267px;
+    box-shadow: 0 6px 50px 0 #00000027;
+
+
+}
+.skill-card img{
+   max-width: 44px;
+   margin-bottom: 30px;
+}
+.skill-card h3{
+    font-size: 20px;
+    color: #181818;
+    margin-bottom: 20px;
+}
+.skill-card P{
+    font-size: 18px;
+    color: #757575;
+    line-height: 30px;
+    margin-bottom: 30px;
+
+}
+
