--- a/style/style.css
+++ b/style/style.css
@@ -45,11 +45,14 @@ font-weight: bold;
     line-height: 30px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+}
 /*main*/
 header{
     background-color: #FFF8F3;
     background: url(../images/developer.png),url(../images/header_bg.png),#FFF8F3;
-    background-position: top left,bottom right;
+    background-position: 23px 38px,bottom right;
     background-repeat: no-repeat;
     
 }
@@ -213,6 +216,44 @@ gap: 24px;
 }
 hr{
     margin: 30px 0;
+}
+footer{
+     margin-top: 130px;
+     background-color: #FFF8F3;
+     padding: 130px 0;
+}
+footer .footer-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    gap: 116px;
+
+}
+.footer-container .social{
+    max-width: 562px;
+
+}
+.footer-container h2{
+    font-size: 35px;
+    color: #181818;
+    margin-bottom: 20px;
+}
+.footer-container p{
+    font-size: 16;
+    color: #474747;
+    line-height: 28px;
+}
+.icon a{
+    margin-right: 24px;
+}
+form input[type="text"],textarea{
+    width: 461px;
+    padding: 18px 31px;
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 5px;
+    color: #757575;
 }
 
 
