--- a/style/style.css
+++ b/style/style.css
@@ -257,3 +257,98 @@ form input[type="text"],textarea{
 }
 
 
+.hide{
+    display: none !important;
+}
+@media screen and (max-width:576px){
+    #skills {
+    padding-top: 60px;
+}
+#skills .skills-container{
+    width: 95%;
+    
+}
+.section-heading h2 {
+    font-size: 30px;
+    
+}
+#skills .skills-container .skills-box,.resume-container,nav {
+    display: flex;
+    flex-direction: column;
+}
+.skills-box .skill-card {
+    
+    max-width: 100%;
+    
+}
+#about .about-container {
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 20px;
+}
+#about .about-container .about-info{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+footer .footer-container {
+    
+    display: flex;
+    flex-direction: column;
+    gap: 116px;
+}
+form input[type="text"], textarea {
+    width: 100%;
+    
+    border: none;
+    border-radius: 5px;
+    color: #757575;
+}
+.resume-container{
+    margin-top: 60px;
+}
+.resume-card {
+    max-width: 511px;
+    margin-right: 10px;
+}
+nav{
+    gap:20px
+}
+nav .menu{
+    flex-wrap: wrap;
+    justify-content: center;
+}
+#banner {
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    text-align: center;
+    
+}
+#banner .banner-image img {
+    width: 100%;
+    vertical-align: middle;
+}
+#banner .banner-content h1 {
+    font-size: 44px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 20px;
+}
+.btngrp{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+header {
+    background-color: #FFF8F3;
+    background:  url(../images/header_bg.png), #FFF8F3;
+    background-position:  bottom right;
+    background-repeat: no-repeat;
+}
+}
